tests/errors/substructural/check/drop_of_linear_struct.err.expected
error: at 5:13: [SUB-DropOfNonDrop] In function 'f', block 'entry': cannot drop non-Drop type Linear
   |
 5 |             drop x;
   |             ^^^^^^
  hint: only types implementing the Drop class can be explicitly dropped
